# eds

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CodeMaid.config  Doxyfile  build.bat  cpp.hint  eds_info.hxx.in  vsconfig.cmd
cmake/: edcConfig.cmake  edcOptions.cmake
documentation/src/: mainpage.h
documentation/src/subpages/: Introduction.h  Test.h
documentation/src/subpages/subsubpages/: Unit_Test_Concepts.h
include/: eds.hpp  eds_event.hpp
include/private/: eds_concepts.hpp  eds_env.hpp  eds_hash.hpp  eds_info.hxx  eds_traits.hpp  eds_types.hpp  eds_util.hpp
include/private/event/: .clang-format  call_handler.hpp  delegate.hpp  delegate_resource_manager.hpp  member_call.hpp  resource.hpp  subscriber.hpp
sandbox/: CMakeLists.txt  copyablevsmovable.cpp  delegatestuff.cpp  sandbox.cpp
src/: edsinfo.cpp
src/eds/: eds.cpp
test/include/: concept_type.hpp  custom_gtest.hpp  function_type.hpp  object_properties.hpp  test_class_forwarding_property.hpp  test_class_parameter_property.hpp  test_function_selection.hpp  test_member.hpp  test_member_copyable.hpp  test_member_copyable_movable.hpp  test_member_movable.hpp  test_object_interface.hpp
test/src/: CallHandlerUGTest.cpp  ConceptsUGTest.cpp  DelegateUGTest.cpp  HashUGTest.cpp  MemberCallUGTest.cpp  TestMember.cpp  TestMemberCopyable.cpp  TestMemberCopyableMovable.cpp  TestMemberMovable.cpp  ToolsUGTest.cpp  TraitsUGTest.cpp
